# yral-neon-postgres

./: Cargo.toml  Justfile
dolr-airdrop/: Cargo.toml
dolr-airdrop/src/: db.rs  lib.rs  m20250702_174441_create_dolr_airdrop_data.rs  main.rs  table_idens.rs
dolr-airdrop/src/entities/: dolr_airdrop_data.rs  mod.rs  prelude.rs
sats-airdrop/: Cargo.toml
sats-airdrop/src/: db.rs  lib.rs  m20250709_133300_create_sats_airdrop_data.rs  main.rs  table_idens.rs
sats-airdrop/src/entities/: mod.rs  prelude.rs  sats_airdrop_data.rs
utils/: Cargo.toml
utils/src/: lib.rs
yral-notification/: Cargo.toml
yral-notification/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
yral-notification/src/entity/: mod.rs  notification.rs  notification_liked_payload.rs  notification_video_upload_payload.rs  prelude.rs
