[workspace]
resolver = "3"
members = [
  "dolr-airdrop", "utils", "sats-airdrop"
]

[workspace.dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"

utils = { path = "./utils" }
